tests/golden/parse_errors/field_assignment_missing_value.cd
struct Person { age: number }
let person = Person { age: 36 };
person.age = ;
