tests/golden/parse_errors/field_assignment_missing_value.err
Parse error at 3:14: expected expression
  person.age = ;
               ^
